# publink

./: .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  bandit.conf  code.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  publink.rst  usage.rst
paper/: paper.bib  paper.md
publink/: __init__.py  doi_tool.py  eventdata.py  publink.py  xdd_search.py
tests/: __init__.py  empty_relations.txt  has_relations.txt  test_doi_tool.py  test_eventdata.py  test_publink.py  test_xdd_search.py
