[tool.poetry]
name = "publink"
version = "0.1.0"
description = "Linking publications with digital object identifiers."
authors = ["Brandon Serna <bserna@usgs.gov>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sciencebasepy = "^1.6.9"
pytest = "^5.4.2"
black = "^19.10b0"
pre-commit = "^2.4.0"
bandit = "^1.6.2"
usgs-datatools = {git = "https://github.com/usgs-sdm/usgs_datatools.git"}

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

