[tool.poetry]
name = "publink"
version = "0.1.0"
description = "Linking publications with digital object identifiers."
authors = ["Brandon Serna <bserna@usgs.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
pre-commit = "^2.4.0"
bandit = "^1.6.2"
sphinx = "^3.0.3"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

